# ocr-erl

./: .gitignore  Cargo.toml  README.md  cargo.toml
.github/workflows/: build.yml  test.yml
bytecode_exec/: Cargo.toml
bytecode_exec/benches/: stress_tests.rs
bytecode_exec/src/: bytecode.rs  compiler.rs  err.rs  executor.rs  lib.rs  rcstr.rs  stack.rs  stdlib.rs
cli/: Cargo.toml
cli/src/: main.rs
parser/: Cargo.toml
parser/src/: ast.rs  err.rs  file.rs  lexer.rs  lib.rs  parser.rs  tokens.rs
